{
  "version": 4,
  "terraform_version": "1.14.0",
  "serial": 107,
  "lineage": "782cc10d-e017-d661-b38d-1c858d8a35d9",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:031954087133:security-group/sg-02ed509a3120c1464",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02ed509a3120c1464",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "ec2-sg",
            "name_prefix": "",
            "owner_id": "031954087133",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0c383f19a8f5fb344"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.db",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:031954087133:security-group/sg-0f1076935b08c868d",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f1076935b08c868d",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.10.0.0/16"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "medingen-db-sg",
            "name_prefix": "",
            "owner_id": "031954087133",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0c383f19a8f5fb344"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-087d1c9a513324697",
            "arn": "arn:aws:ec2:ap-south-1:031954087133:instance/i-058066b1c5194aaa5",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-058066b1c5194aaa5",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "medingen-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0ab357e87338e0b9a",
            "private_dns": "ip-10-10-1-187.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.10.1.187",
            "public_dns": "ec2-35-154-224-159.ap-south-1.compute.amazonaws.com",
            "public_ip": "35.154.224.159",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0cdccb328de7ce454",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-096fe885c735bd4b5",
            "tags": {
              "Name": "dev-app-server"
            },
            "tags_all": {
              "Name": "dev-app-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-02ed509a3120c1464"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.ec2_sg",
            "module.ec2.aws_key_pair.medingen_key",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ba2880933774e75b",
            "arn": "arn:aws:ec2:ap-south-1:031954087133:elastic-ip/eipalloc-0ba2880933774e75b",
            "domain": "vpc",
            "id": "eipalloc-0ba2880933774e75b",
            "network_border_group": "ap-south-1",
            "public_dns": "ec2-13-202-147-126.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.202.147.126",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "medingen-nat-eip"
            },
            "tags_all": {
              "Name": "medingen-nat-eip"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:031954087133:internet-gateway/igw-03e547aa360edb428",
            "id": "igw-03e547aa360edb428",
            "owner_id": "031954087133",
            "tags": {
              "Name": "medingen-igw"
            },
            "tags_all": {
              "Name": "medingen-igw"
            },
            "vpc_id": "vpc-0c383f19a8f5fb344"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ba2880933774e75b",
            "association_id": "eipassoc-0a66c59db87ea1a44",
            "connectivity_type": "public",
            "id": "nat-086a011f055eadf24",
            "network_interface_id": "eni-0f9ca6db1c11ede42",
            "private_ip": "10.10.1.188",
            "public_ip": "13.202.147.126",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-096fe885c735bd4b5",
            "tags": {
              "Name": "medingen-nat"
            },
            "tags_all": {
              "Name": "medingen-nat"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:031954087133:route-table/rtb-049ed29a6ee7d1f77",
            "id": "rtb-049ed29a6ee7d1f77",
            "owner_id": "031954087133",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-086a011f055eadf24",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "medingen-private-rt"
            },
            "tags_all": {
              "Name": "medingen-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c383f19a8f5fb344"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:031954087133:route-table/rtb-09e987869a850437c",
            "id": "rtb-09e987869a850437c",
            "owner_id": "031954087133",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-03e547aa360edb428",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "medingen-public-rt"
            },
            "tags_all": {
              "Name": "medingen-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c383f19a8f5fb344"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02cd063fce351906f",
            "route_table_id": "rtb-049ed29a6ee7d1f77",
            "subnet_id": "subnet-0e6170c38c1f520d4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-018ec66c1b3d24fe2",
            "route_table_id": "rtb-049ed29a6ee7d1f77",
            "subnet_id": "subnet-0999f67d0d1bc49a2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-090d40c24787c44e0",
            "route_table_id": "rtb-09e987869a850437c",
            "subnet_id": "subnet-096fe885c735bd4b5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-096dd3243d969f8b1",
            "route_table_id": "rtb-09e987869a850437c",
            "subnet_id": "subnet-0904d04092cfab38e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:031954087133:subnet/subnet-0e6170c38c1f520d4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.10.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e6170c38c1f520d4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "031954087133",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "medingen-private-0",
              "Tier": "private"
            },
            "tags_all": {
              "Name": "medingen-private-0",
              "Tier": "private"
            },
            "vpc_id": "vpc-0c383f19a8f5fb344"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:031954087133:subnet/subnet-0999f67d0d1bc49a2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.10.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0999f67d0d1bc49a2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "031954087133",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "medingen-private-1",
              "Tier": "private"
            },
            "tags_all": {
              "Name": "medingen-private-1",
              "Tier": "private"
            },
            "vpc_id": "vpc-0c383f19a8f5fb344"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:031954087133:subnet/subnet-096fe885c735bd4b5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.10.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-096fe885c735bd4b5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "031954087133",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "medingen-public-0",
              "Tier": "public"
            },
            "tags_all": {
              "Name": "medingen-public-0",
              "Tier": "public"
            },
            "vpc_id": "vpc-0c383f19a8f5fb344"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:031954087133:subnet/subnet-0904d04092cfab38e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.10.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0904d04092cfab38e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "031954087133",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "medingen-public-1",
              "Tier": "public"
            },
            "tags_all": {
              "Name": "medingen-public-1",
              "Tier": "public"
            },
            "vpc_id": "vpc-0c383f19a8f5fb344"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:031954087133:vpc/vpc-0c383f19a8f5fb344",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-0b099b7e8b326c01c",
            "default_route_table_id": "rtb-052d8de964d9544b4",
            "default_security_group_id": "sg-04bdb4024f91c1909",
            "dhcp_options_id": "dopt-0cb77004677dab28b",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0c383f19a8f5fb344",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-052d8de964d9544b4",
            "owner_id": "031954087133",
            "tags": {
              "Env": "dev",
              "Name": "medingen-vpc"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "medingen-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}